Add division-grade mapping and dynamic selects
Add a DIVISION_GRADES_MAP and include the 'Métro' division; build division and grade selects so grades update when the division changes. Refactor addRow/readRow helpers to use consistent DOM order and modern Array.from/map/filter patterns, and ensure onInput is called after rows are added. Update rendering logic for promotions, stripes, arrivals/departures and rappels to handle empty states consistently and adjust displayed ordering/formatting. Minor UI tweak: bold the header title in index.html and adjust html2canvas option formatting.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <img src="LSPD.webp" alt="LSPD Logo" class="logo-overflow">
                 <div class="header-black-part">
                     <div class="logo-group">
-                        <span class="title-text">RÉSUMER DE CÉRÉMONIE DE MISSION ROW</span>
+                        <span class="title-text"><b>RÉSUMER DE CÉRÉMONIE DE MISSION ROW</b></span>
                     </div>
                 </div>
                 <div class="summary-box" id="summary-date">
