Make preview responsive and add date SVG background
Introduce an SVG polygon background and a .summary-text span inside #summary-date, and update script.js to render the date into that span. Overhaul CSS to enable a responsive preview: set body max-width to 100%, add .screen-container, make .ui-panel fluid, adjust grid to use named areas and gaps, and refine .col/.main-grid section sizing and overflow. Style .summary-box to position the SVG behind the text and ensure proper alignment/spacing. These changes improve layout flexibility and fix the date rendering/positioning in the preview.

--- a/index.html
+++ b/index.html
@@ -115,7 +115,12 @@
                     </div>
                 </div>
                 <div class="summary-box" id="summary-date">
+                    <svg class="summary-bg" width="100%" height="100%" viewBox="0 0 400 55" preserveAspectRatio="none">
+                        <polygon points="25,0 400,0 375,55 0,55" fill="#fff"></polygon>
+                    </svg>
+                    <span class="summary-text"></span>
                 </div>
+
             </header>
 
             <div class="main-grid">
