Fix French labels and typos in UI and script
Correct French wording and typos in index.html and script.js for grammar and consistency: change 'Promotions — Corps d'applications' → 'Promotions — Corps d'application', 'Promotions — Division' → 'Promotions — Divisions', 'RÉSUMER' → 'RÉSUMÉ', and 'CONVOCATION' → 'CONVOCATIONS'. Also update script.js role label 'Instructeur Confirmer' → 'Instructeur Confirmé' and adjust generated headings 'CORPS D'APPLICATIONS' → 'CORPS D'APPLICATION' and 'DIVISION' → 'DIVISIONS' so dynamic output matches the corrected UI text.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <!-- Promotions — Corps d'applications -->
             <div class="form-group">
                 <div class="group-header">
-                    <label>Promotions — Corps d'applications</label>
+                    <label>Promotions — Corps d'application</label>
                     <button type="button" class="btn-add" id="btn-add-promo-corps" title="Ajouter">+</button>
                 </div>
                 <div id="list-promo-corps" class="dynamic-list"></div>
@@ -42,7 +42,7 @@
             <!-- Promotions — Division -->
             <div class="form-group">
                 <div class="group-header">
-                    <label>Promotions — Division</label>
+                    <label>Promotions — Divisions</label>
                     <button type="button" class="btn-add" id="btn-add-promo-div" title="Ajouter">+</button>
                 </div>
                 <div id="list-promo-div" class="dynamic-list"></div>
@@ -111,7 +111,7 @@
                 <img src="LSPD.webp" alt="LSPD Logo" class="logo-overflow">
                 <div class="header-black-part">
                     <div class="logo-group">
-                        <span class="title-text"><b>RÉSUMER DE CÉRÉMONIE DE MISSION ROW</b></span>
+                        <span class="title-text"><b>RÉSUMÉ DE CÉRÉMONIE DE MISSION ROW</b></span>
                     </div>
                 </div>
                 <div class="summary-box" id="summary-date">
@@ -156,7 +156,7 @@
                     </section>
 
                     <section class="bottom-section">
-                        <h2>CONVOCATION</h2>
+                        <h2>CONVOCATIONS</h2>
                         <div id="convocations-container"></div>
                     </section>
                 </div>
