--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
 
             <!-- Date -->
             <div class="form-group">
-                <label for="field-date">Date</label>
+                <h3>Date</h3>
                 <input type="text" id="field-date" placeholder="Ex : 15 Février 2026">
             </div>
 
             <hr>
-            <br>
 
             <!-- Rappels -->
+            <h3>Rappels</h3>
             <div class="form-group">
                 <div class="group-header">
-                    <label>Rappels — Supervision</label>
+                    <label>Supervision</label>
                     <button type="button" class="btn-add" id="btn-add-rappel-sup" title="Ajouter">+</button>
                 </div>
                 <div id="list-rappels-sup" class="dynamic-list"></div>
@@ -38,7 +38,7 @@
 
             <div class="form-group">
                 <div class="group-header">
-                    <label>Rappels — Watch Commander</label>
+                    <label>Watch Commander</label>
                     <button type="button" class="btn-add" id="btn-add-rappel-wc" title="Ajouter">+</button>
                 </div>
                 <div id="list-rappels-wc" class="dynamic-list"></div>
@@ -46,16 +46,15 @@
 
             <div class="form-group">
                 <div class="group-header">
-                    <label>Rappels — Command Staff</label>
+                    <label>Command Staff</label>
                     <button type="button" class="btn-add" id="btn-add-rappel-cs" title="Ajouter">+</button>
                 </div>
                 <div id="list-rappels-cs" class="dynamic-list"></div>
             </div>
 
             <hr>
-            <br>
 
-            <!-- Promotions — Corps d'applications -->
+            <h3>Promotions</h3>
             <div class="form-group">
                 <div class="group-header">
                     <label>Promotions — Corps d'application</label>
@@ -74,7 +73,7 @@
             </div>
 
             <hr>
-            <br>
+            <h3>Service Stripes</h3>
 
             <!-- Service Stripes -->
             <div class="form-group">
@@ -86,12 +85,11 @@
             </div>
 
             <hr>
-            <br>
-
+            <h3>Convocations</h3>
             <!-- Convocations — Superviseur -->
             <div class="form-group">
                 <div class="group-header">
-                    <label>Convocations — Superviseur</label>
+                    <label>Superviseur</label>
                     <button type="button" class="btn-add" id="btn-add-conv-sup" title="Ajouter">+</button>
                 </div>
                 <div id="list-conv-sup" class="dynamic-list"></div>
@@ -100,7 +98,7 @@
             <!-- Convocations — Watch Commander -->
             <div class="form-group">
                 <div class="group-header">
-                    <label>Convocations — Watch Commander</label>
+                    <label>Watch Commander</label>
                     <button type="button" class="btn-add" id="btn-add-conv-wc" title="Ajouter">+</button>
                 </div>
                 <div id="list-conv-wc" class="dynamic-list"></div>
@@ -109,27 +107,25 @@
             <!-- Convocations — Command Staff -->
             <div class="form-group">
                 <div class="group-header">
-                    <label>Convocations — Command Staff</label>
+                    <label>Command Staff</label>
                     <button type="button" class="btn-add" id="btn-add-conv-cs" title="Ajouter">+</button>
                 </div>
                 <div id="list-conv-cs" class="dynamic-list"></div>
             </div>
 
             <hr>
-            <br>
 
             <!-- Arrivées -->
             <div class="form-group">
-                <label for="field-arrivees">Arrivées</label>
+                <h3>Arrivées</h3>
                 <textarea id="field-arrivees" rows="3" placeholder="Ex : 21 | Marcus Bradford"></textarea>
             </div>
 
             <hr>
-            <br>
 
             <!-- Départs -->
             <div class="form-group">
-                <label for="field-departs">Départs</label>
+                <h3>Départs</h3>
                 <textarea id="field-departs" rows="3" placeholder="Ex : 89 | Alvaro Pena"></textarea>
             </div>
 
