--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h3>Promotions</h3>
             <div class="form-group">
                 <div class="group-header">
-                    <label>Promotions — Corps d'application</label>
+                    <label>Corps d'application</label>
                     <button type="button" class="btn-add" id="btn-add-promo-corps" title="Ajouter">+</button>
                 </div>
                 <div id="list-promo-corps" class="dynamic-list"></div>
@@ -66,7 +66,7 @@
             <!-- Promotions — Division -->
             <div class="form-group">
                 <div class="group-header">
-                    <label>Promotions — Divisions</label>
+                    <label>Divisions</label>
                     <button type="button" class="btn-add" id="btn-add-promo-div" title="Ajouter">+</button>
                 </div>
                 <div id="list-promo-div" class="dynamic-list"></div>
